--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
         <div class="t-light">
             <nav class="o-split-bar c-inner-nav c-inner-nav--desktop">
                 <div class="o-split-bar__first o-split-bar__first--shrink">
-                    <a href="index.html">
-                        <img class="c-logo" src="{{ '/assets/images/logo.png' | prepend: site.url }}" alt="NEXT 2019" width="240" height="54">
+                    <a href="{{ site.baseurl }}">
+                        <img class="c-logo" src="{{ '/assets/images/logo.png' | prepend: site.baseurl }}" alt="NEXT 2019" width="240" height="54">
                     </a>
                 </div>
                 <div class="o-split-bar__second">
@@ -23,7 +23,7 @@
                 <nav class="o-split-bar c-inner-nav c-inner-nav--mobile">
                     <div class="o-split-bar__first o-split-bar__first--front o-split-bar__first--shrink">
                         <a href="{{ site.url }}">
-                            <img class="c-logo c-logo--mobile" src="{{ '/assets/images/logo.png' | prepend: site.url }}" alt="NEXT 2019" width="240" height="54">
+                            <img class="c-logo c-logo--mobile" src="{{ '/assets/images/logo.png' | prepend: site.baseurl }}" alt="NEXT 2019" width="240" height="54">
                         </a>
                     </div>
                     <div class="o-split-bar__second o-split-bar__second--front">
