--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,8 +41,6 @@
                 <div class="o-split-bar__first u-w100@mobile-menu-down">
                     <p class="u-w100@mobile-menu-down u-two-col@mobile-menu-down">
                             <a href="https://ncit.edu.np/" class="c-link c-link--outbound c-link--anim u-type-tinier u-type-faint u-mr1" target="_blank" rel="noreferrer noopener">NCIT website</a>
-
-                        <a href="" class="c-link c-link--anim u-type-tinier u-type-faint u-mr1">Made with &hearts; by Ashish & Nischal</a>
                             <span class="">
 
 
@@ -57,7 +55,7 @@
                 </div>
                 <hr class="u-type-faint u-dn u-db@mobile-menu-down">
                 <div class="o-split-bar__second u-w100@mobile-menu-down">
-                    <p class="u-type-faint u-type-tinier">&copy; 2019 Nepal College of Information Technology</p>
+                    <p class="u-type-faint u-type-tinier">Made with &hearts; by <a href="https://aashishtiwari.com.np" class="c-link c-link--outbound c-link--anim u-type-tinier u-type-faint u-mr1" target="_blank" rel="noreferrer noopener">Ashish</a> & <a href="https://nischal.info.np/" class="c-link c-link--outbound c-link--anim u-type-tinier u-type-faint u-mr1" target="_blank" rel="noreferrer noopener">Nischal</a></p>
                 </div>
             </div>
         </div>
