--- a/_includes/header.html
+++ b/_includes/header.html
@@ -71,7 +71,7 @@
                                     <p class="u-type-tinier u-m0">Made with &hearts; by Ashish and Nischal.</p>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-end">
-                                        <p class="u-type-tinier u-m0">&copy; 2019 NCIT</p>
+                                        <p class="u-type-tinier u-m0"></p>
                                 </div>
                             </div>
                         </div>
