--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,9 +9,9 @@ description: >
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="twitter:title" property="twitter:title" content="TwitchCon 2019 | Paint the town purple" data-proofer-ignore>
+    <meta name="twitter:title" property="twitter:title" content="" data-proofer-ignore>
 	  <meta name="description" property="description" content="" data-proofer-ignore>
-	  <meta name="og:site_name" property="og:site_name" content="TwitchCon 2019 | Paint the town purple" data-proofer-ignore>
+	  <meta name="og:site_name" property="og:site_name" content="" data-proofer-ignore>
 	  <meta name="og:description" property="og:description" content="" data-proofer-ignore>
     <link rel="stylesheet" href="{{ '/assets/main.css' | prepend: site.baseurl }}">
     <title data-i18n="meta:title:brewing-innovative-minds">Brewing Innovative Minds | NEXT 2019</title>
@@ -35,7 +35,7 @@ description: >
     <link rel="apple-touch-icon" sizes="1024x1024" href="assets/icons/apple-touch-icon-1024x1024.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="TwitchCon">
+    <meta name="apple-mobile-web-app-title" content="">
     <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="assets/icons/apple-touch-startup-image-320x460.png">
     <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="assets/icons/apple-touch-startup-image-640x920.png">
     <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="assets/icons/apple-touch-startup-image-640x1096.png">
