--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,10 +11,10 @@ description: >
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="twitter:title" property="twitter:title" content="" data-proofer-ignore>
 	  <meta name="description" property="description" content="" data-proofer-ignore>
-	  <meta name="og:site_name" property="og:site_name" content="" data-proofer-ignore>
+	  <meta name="og:site_name" property="og:site_name" content="NEXT 2019 | Brewing Innovative Minds" data-proofer-ignore>
 	  <meta name="og:description" property="og:description" content="" data-proofer-ignore>
     <link rel="stylesheet" href="{{ '/assets/main.css' | prepend: site.baseurl }}">
-    <title data-i18n="meta:title:brewing-innovative-minds">Brewing Innovative Minds | NEXT 2019</title>
+    <title data-i18n="meta:title:brewing-innovative-minds">NEXT 2019 | Brewing Innovative Minds</title>
     <link rel="shortcut icon" href="assets/icons/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
