--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,9 @@
                 <div class="o-columns__column u-mr2">
                     <p class="u-type-menu-text">NEXT 2019</p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">About NEXT</a></p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Programs @ NEXT</a></p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Sessions @ NEXT</a></p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny c-link--outbound" target="_blank" rel="noreferrer noopener">Schedule</a></p>
+                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Programs</a></p>
+                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Sessions</a></p>
+                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny " target="_blank" rel="noreferrer noopener">Schedule</a></p>
                 </div>
 
                 <div class="o-columns__column">
@@ -23,10 +23,11 @@
                 
                 </div>
                 <div class="o-columns__column">
-                    <p class="u-type-menu-text">Games @ NEXT</p>
+                    <p class="u-type-menu-text">Games </p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">PUBG Mobile</a></p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">FIFA 19</a></p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">CS GO</a></p>
+                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Dota 2</a></p>
                 </div>
                 <div class="o-columns__column">
                     <p class="u-type-menu-text">Resources</p>
