--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,12 +9,12 @@ description: >
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="twitter:title" property="twitter:title" content="" data-proofer-ignore>
-	  <meta name="description" property="description" content="" data-proofer-ignore>
-	  <meta name="og:site_name" property="og:site_name" content="NEXT 2019 | Brewing Innovative Minds" data-proofer-ignore>
-	  <meta name="og:description" property="og:description" content="" data-proofer-ignore>
+    <meta name="twitter:title" property="twitter:title" content="NEXT 2019" data-proofer-ignore>
+	  <meta name="description" property="description" content="Brewing Innovative Minds" data-proofer-ignore>
+	  <meta name="og:site_name" property="og:site_name" content="NEXT 2019" data-proofer-ignore>
+	  <meta name="og:description" property="og:description" content="Brewing Innovative Minds" data-proofer-ignore>
     <link rel="stylesheet" href="{{ '/assets/main.css' | prepend: site.baseurl }}">
-    <title data-i18n="meta:title:brewing-innovative-minds">NEXT 2019 | Brewing Innovative Minds</title>
+    <title data-i18n="meta:title:brewing-innovative-minds">NEXT 2019</title>
     <link rel="shortcut icon" href="assets/icons/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
@@ -35,7 +35,7 @@ description: >
     <link rel="apple-touch-icon" sizes="1024x1024" href="assets/icons/apple-touch-icon-1024x1024.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="">
+    <meta name="apple-mobile-web-app-title" content="NEXT 2019">
     <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="assets/icons/apple-touch-startup-image-320x460.png">
     <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="assets/icons/apple-touch-startup-image-640x920.png">
     <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="assets/icons/apple-touch-startup-image-640x1096.png">
