--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,8 @@
                     </a>
                 </div>
                 <div class="o-split-bar__second">
-                    <a href="" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">About</a>
-                    <a href="" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Programs</a>
+                    <a href="{{ '/about/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">About</a>
+                    <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Programs</a>
                     <a href="" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Session</a>
                     <a href="" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Schedule</a>                    
                     <a href="" class="c-button c-button--margin c-button--gradient u-type-menu-text">Register for Event</a>
@@ -31,8 +31,8 @@
                     </div>
                     <div id="js-mobile-menu" class="c-inner-nav__mobile js-menu-element">
                         <div class="c-inner-nav__mobile-inner u-px1">
-                            <a href="" class="c-inner-nav__link c-link">About event</a>
-                            <a href="" class="c-inner-nav__link c-link">Registration</a>
+                            <a href="{{ '/about/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">About event</a>
+                            <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Registration</a>
                             <a href="" class="c-inner-nav__link c-link">Programs</a>
                             <a href="" class="c-inner-nav__link c-link">Sessions</a>
                             <hr class="u-mb2 u-mt2">
