--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
                 </div>
                 <div class="o-columns__column u-mr2">
                     <p class="u-type-menu-text">NEXT 2019</p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">About NEXT</a></p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Programs</a></p>
+                    <p class="u-mb0 u-mt0"><a href="{{ '/about/' | prepend: site.baseurl }}" class="c-link c-link--anim u-type-tiny">About</a></p>
+                    <p class="u-mb0 u-mt0"><a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-link c-link--anim u-type-tiny">Programs</a></p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Sessions</a></p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny " target="_blank" rel="noreferrer noopener">Schedule</a></p>
                 </div>
