--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="t-light">
             <nav class="o-split-bar c-inner-nav c-inner-nav--desktop">
                 <div class="o-split-bar__first o-split-bar__first--shrink">
-                    <a href="{{ site.baseurl }}">
+                    <a href="{{ site.url }}">
                         <img class="c-logo" src="{{ '/assets/images/logo.png' | prepend: site.baseurl }}" alt="NEXT 2019" width="240" height="54">
                     </a>
                 </div>
