--- a/assets/main.css
+++ b/assets/main.css
@@ -1626,7 +1626,7 @@ th {
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   grid-template-rows: 260px 260px 260px;
   grid-gap: 8px;
-  height: 531px;
+  /* height: 531px;*/
   overflow: hidden; }
   @media (max-width: 731px) {
     .o-card-list {
