--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
 
                       <a href="" class="c-link u-mlp5"></a>
 
-                      <a href="" class="c-link u-mlp5 c-link--facebook"></a>
+                      <a href="https://www.facebook.com/nextncit/" class="c-link u-mlp5 c-link--facebook" target="_blank"></a>
 
                       <a href="" class="c-link u-mlp5 c-link--twitter"></a>
 
