--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
                             <span class="">
 
 
-                 <a href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener" class="c-link u-type-faint u-mlp5 c-link--facebook"></a>
+                 <a href="https://www.facebook.com/nextncit/" target="_blank" rel="noreferrer noopener" class="c-link u-type-faint u-mlp5 c-link--facebook"></a>
 
                  <a href="https://www.twitter.com/" target="_blank" rel="noreferrer noopener" class="c-link u-type-faint u-mlp5 c-link--twitter"></a>
 
