--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="o-columns__column">
                     <p class="u-type-menu-text">Resources</p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">News/Announcements</a></p>
+                    <p class="u-mb0 u-mt0"><a href="{{ '/news-and-announcements'}}" class="c-link c-link--anim u-type-tiny">News/Announcements</a></p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Code of Conduct</a></p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">FAQ</a></p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Stay Connected</a></p>
