--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
                                     <a href="" class="c-link u-type-body u-mb1">Schedule</a>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-start u-flex u-flex-vertical">
-                                    <a href="" class="c-link u-type-body u-mb1">News/Announcements</a>
+                                    <a href="{{ '/news-and-announcements'}}" class="c-link u-type-body u-mb1">News/Announcements</a>
                                 </div>
                             </div>
                             <hr class="u-mb2 u-mt1">
