Added Google Analytics

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -50,6 +50,15 @@ description: >
     <meta name="msapplication-TileColor" content="#6441a4">
     <meta name="msapplication-TileImage" content="assets/icons/mstile-144x144.png">
     <meta name="msapplication-config" content="assets/icons/browserconfig.xml">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143254048-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143254048-1');
+</script>
   </head>
  
   <body>
