--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
                     <a href="{{ '/about/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">About</a>
                     <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Programs</a>
                     <a href="" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Session</a>
-                    <a href="" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Schedule</a>                    
+                    <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Schedule</a>                    
                     <a href="" class="c-button c-button--margin c-button--gradient u-type-menu-text">Register for Event</a>
                 </div>
             </nav>
@@ -38,7 +38,7 @@
                             <hr class="u-mb2 u-mt2">
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
-                                    <a href="" class="c-link u-type-body u-mb1">Schedule</a>
+                                    <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-link u-type-body u-mb1">Schedule</a>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-start u-flex u-flex-vertical">
                                     <a href="{{ '/news-and-announcements'}}" class="c-link u-type-body u-mb1">News/Announcements</a>
