--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,6 +14,8 @@ description: >
 	  <meta name="og:site_name" property="og:site_name" content="NEXT 2019" data-proofer-ignore>
 	  <meta name="og:description" property="og:description" content="Brewing Innovative Minds" data-proofer-ignore>
     <link rel="stylesheet" href="{{ '/assets/main.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ '/assets/schedule.css' | prepend: site.baseurl }}">
+
     <title data-i18n="meta:title:brewing-innovative-minds">NEXT 2019</title>
     <link rel="shortcut icon" href="assets/icons/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
