Removes dirty fb image links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,10 @@
                 <div class="o-split-bar__second">
                     <a href="{{ '/about/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">About</a>
                     <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Programs</a>
-                    <a href="" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Session</a>
+                    <a href="{{ '/session/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Session</a>
                     <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Schedule</a>                    
-                    <a href="" class="c-button c-button--margin c-button--gradient u-type-menu-text">Register for Event</a>
+                    
+                <!-- <a href="" class="c-button c-button--margin c-button--gradient u-type-menu-text">Register for Event</a> -->
                 </div>
             </nav>
         </div>
@@ -33,8 +34,8 @@
                         <div class="c-inner-nav__mobile-inner u-px1">
                             <a href="{{ '/about/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">About event</a>
                             <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Registration</a>
-                            <a href="" class="c-inner-nav__link c-link">Programs</a>
-                            <a href="" class="c-inner-nav__link c-link">Sessions</a>
+                            <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Programs</a>
+                            <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Sessions</a>
                             <hr class="u-mb2 u-mt2">
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
