--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,13 +42,13 @@
                                     <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-link u-type-body u-mb1">Schedule</a>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-start u-flex u-flex-vertical">
-                                    <a href="{{ '/news-and-announcements'}}" class="c-link u-type-body u-mb1">News/Announcements</a>
+                                    <a href="{{ '/news-and-announcements/' | prepend: site.baseurl }}" class="c-link u-type-body u-mb1">News/Announcements</a>
                                 </div>
                             </div>
                             <hr class="u-mb2 u-mt1">
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
-                                    <a href="" class="c-link u-type-tiny u-mb1">Stay Connected</a>
+                                    <a href="{{ '/stay-connected/' | prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">Stay Connected</a>
                                     <a href="" class="c-link u-type-tiny u-mb1">Code of Conduct</a>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-start u-flex u-flex-vertical">
