Added links to faq page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,8 +48,8 @@
                             <hr class="u-mb2 u-mt1">
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
-                                    <a href="{{ '/stay-connected/' | prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">Stay Connected</a>
-                                    <a href="" class="c-link u-type-tiny u-mb1">Code of Conduct</a>
+                                    <a href="{{ '/stay-connected/' | prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">Contact us</a>
+                                    <a href="{{ '/faq' | prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">FAQ</a>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-start u-flex u-flex-vertical">
                                     <a href="" class="c-link u-type-tiny u-mb1">Become a Sponsor</a>
