--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
                     <p class="u-type-menu-text">Resources</p>
                     <p class="u-mb0 u-mt0"><a href="{{ '/news-and-announcements'}}" class="c-link c-link--anim u-type-tiny">News/Announcements</a></p>
                     <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Code of Conduct</a></p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">FAQ</a></p>
+                    <p class="u-mb0 u-mt0"><a href="{{ '/faq/' | prepend: site.baseurl }}" class="c-link c-link--anim u-type-tiny">FAQ</a></p>
                     <p class="u-mb0 u-mt0"><a href="{{ '/stay-connected/' | prepend: site.baseurl }}" class="c-link c-link--anim u-type-tiny">Contact us</a></p>
                 </div>                                                
             </div>
