--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,8 @@
                     <p class="u-type-menu-text">NEXT 2019</p>
                     <p class="u-mb0 u-mt0"><a href="{{ '/about/' | prepend: site.baseurl }}" class="c-link c-link--anim u-type-tiny">About</a></p>
                     <p class="u-mb0 u-mt0"><a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-link c-link--anim u-type-tiny">Programs</a></p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny">Sessions</a></p>
-                    <p class="u-mb0 u-mt0"><a href="" class="c-link c-link--anim u-type-tiny " target="_blank" rel="noreferrer noopener">Schedule</a></p>
+                    <p class="u-mb0 u-mt0"><a href="{{ '/session/' | prepend: site.baseurl }}" class="c-link c-link--anim u-type-tiny">Sessions</a></p>
+                    <p class="u-mb0 u-mt0"><a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-link c-link--anim u-type-tiny" rel="noreferrer noopener">Schedule</a></p>
                 </div>
 
                 <div class="o-columns__column">
