Registered register section and other changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <div class="o-columns o-columns--gaps u-db@mobile-menu-down u-mb3">
                 <div class="o-columns__column o-columns__column--fill">
                     <h4 class="u-type-h4 u-mt0 u-mb1">Watch the future unfold.</h4>
-                    <a href="" class="c-button c-button--gradient u-type-menu-text u-mb1">Register for Event</a>
+                    <a href="{{ '/register-for-event/' | prepend: site.baseurl }}" class="c-button c-button--gradient u-type-menu-text u-mb1">Register for Event</a>
                 </div>
                 <div class="o-columns__column u-mr2">
                     <p class="u-type-menu-text">NEXT 2019</p>
