--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
                     <a href="{{ '/session/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Session</a>
                     <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Schedule</a>                    
                     
-                <!-- <a href="" class="c-button c-button--margin c-button--gradient u-type-menu-text">Register for Event</a> -->
+                 <a href="{{ '/register-for-event/' | prepend: site.baseurl }}" class="c-button c-button--margin c-button--gradient u-type-menu-text">Register for Event</a>
                 </div>
             </nav>
         </div>
