Changed the mobile navigation bar color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
             </nav>
         </div>
     </div>  
-    <div class="t-black">
+    <div class="t-dark">
         <div class="o-bg o-bleed">
             <div class="o-full">
                 <nav class="o-split-bar c-inner-nav c-inner-nav--mobile">
