--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,9 +33,9 @@
                     <div id="js-mobile-menu" class="c-inner-nav__mobile js-menu-element">
                         <div class="c-inner-nav__mobile-inner u-px1">
                             <a href="{{ '/about/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">About event</a>
-                            <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Registration</a>
+                            <a href="{{ '/register-for-event/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Registration</a>
                             <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Programs</a>
-                            <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Sessions</a>
+                            <a href="{{ '/session/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Sessions</a>
                             <hr class="u-mb2 u-mt2">
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
@@ -49,10 +49,10 @@
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
                                     <a href="{{ '/stay-connected/' | prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">Contact us</a>
-                                    <a href="{{ '/faq' | prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">FAQ</a>
+                                    <a href="{{ '/faq/'| prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">FAQ</a>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-start u-flex u-flex-vertical">
-                                    <a href="" class="c-link u-type-tiny u-mb1">Become a Sponsor</a>
+                                    <a href="#" class="c-link u-type-tiny u-mb1">Become a Sponsor</a>
                                     <span class="u-type-h5 u-mb1">
 
                       <a href="" class="c-link u-mlp5"></a>
