--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,9 @@
                     <a href="{{ '/about/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">About</a>
                     <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Programs</a>
                     <a href="{{ '/session/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Session</a>
+                    <a href="{{ '/games/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Games</a>
                     <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-link c-link--margin c-link--anim-plain-mirror u-type-menu-text">Schedule</a>                    
+                    
                     
                  <a href="{{ '/register-for-event/' | prepend: site.baseurl }}" class="c-button c-button--margin c-button--gradient u-type-menu-text">Register for Event</a>
                 </div>
@@ -36,6 +38,7 @@
                             <a href="{{ '/register-for-event/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Registration</a>
                             <a href="{{ '/programs/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Programs</a>
                             <a href="{{ '/session/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Sessions</a>
+                            <a href="{{ '/games/' | prepend: site.baseurl }}" class="c-inner-nav__link c-link">Games</a>                            
                             <hr class="u-mb2 u-mt2">
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
