Fixed inconsistent announcement listing

--- a/assets/main.css
+++ b/assets/main.css
@@ -1763,7 +1763,7 @@ th {
     bottom: 3rem;
     right: 3rem; }
 .c-blog-card {
-  min-width: 500px; }
+   }
 .c-card {
   width: 100%;
   display: flex;
