Added read more feature

--- a/assets/main.css
+++ b/assets/main.css
@@ -86,7 +86,7 @@ li {
   line-height: 1.5em; }
 
 a {
-  color: #6441A4;
+  color: #112C46;
   text-decoration: none;
   transition: color .25s ease-in-out; }
   a:hover {
