Revert to fix hamburger

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
                         </a>
                     </div>
                     <div class="o-split-bar__second o-split-bar__second--front">
-                        <button aria-haspopup="true" class="u-mr1 u-ml1 u-mt1 u-mb1 c-inner-nav__button js-menu-toggle "></button>
+                        <button aria-haspopup="true" class="c-inner-nav__button js-menu-toggle"></button>
                     </div>
                     <div id="js-mobile-menu" class="c-inner-nav__mobile js-menu-element">
                         <div class="c-inner-nav__mobile-inner u-px1">
