Edited Header and Footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
                 </div>
                 <hr class="u-type-faint u-dn u-db@mobile-menu-down">
                 <div class="o-split-bar__second u-w100@mobile-menu-down">
-                    <p class="u-type-faint u-type-tinier">Made with &hearts; by <a href="https://aashishtiwari.com.np" class="c-link c-link--anim u-type-tiny u-type-faint " target="_blank" rel="noreferrer noopener">Ashish</a> and <a href="https://nischal.info.np/" class="c-link c-link--anim u-type-tiny u-type-faint" target="_blank" rel="noreferrer noopener">Nischal</a></p>
+                    <p class="u-type-faint u-type-tinier">Made with &hearts; by <a href="https://aashishtiwari.com.np" class="c-link c-link--anim c-link--outbound u-type-faint " target="_blank" rel="noreferrer noopener">Ashish</a> and <a href="https://nischal.info.np/" class="c-link c-link--anim c-link--outbound u-type-faint" target="_blank" rel="noreferrer noopener">Nischal</a></p>
                 </div>
             </div>
         </div>
