--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,7 +72,7 @@
                             <hr class="u-mb2 u-mt1">
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start">
-                                    <p class="u-type-tinier u-m0">Made with &hearts; by <a href="https://aashishtiwari.com.np" class="c-link c-link--anim u-type-tiny u-type-faint " target="_blank" rel="noreferrer noopener">Ashish</a> and <a href="https://nischal.info.np/" class="c-link c-link--anim u-type-tiny u-type-faint" target="_blank" rel="noreferrer noopener">Nischal</a></p>
+                                    <p class="u-type-tinier u-m0">Made with &hearts; by <a href="https://aashishtiwari.com.np" class="c-link c-link--anim c-link--outbound " target="_blank" rel="noreferrer noopener">Ashish</a> and <a href="https://nischal.info.np/" class="c-link c-link--anim c-link--outbound" target="_blank" rel="noreferrer noopener">Nischal</a></p>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-end">
                                         <p class="u-type-tinier u-m0"></p>
