--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,19 +43,22 @@
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
                                     <a href="{{ '/schedule/' | prepend: site.baseurl }}" class="c-link u-type-body u-mb1">Schedule</a>
+                                    <a href="#" class="c-link u-type-tiny u-mb1">Become a Sponsor</a>
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-start u-flex u-flex-vertical">
+                                  
                                     <a href="{{ '/news-and-announcements/' | prepend: site.baseurl }}" class="c-link u-type-body u-mb1">News/Announcements</a>
+                                    <a href="{{ '/faq/'| prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">FAQ</a>
                                 </div>
                             </div>
                             <hr class="u-mb2 u-mt1">
                             <div class="o-split-bar u-w100">
                                 <div class="o-split-bar__first o-split-bar__first--align-start u-flex u-flex-vertical">
+                                    <a href="{{ '/code-of-conduct/'| prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">Code of Conduct</a>
                                     <a href="{{ '/stay-connected/' | prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">Contact us</a>
-                                    <a href="{{ '/faq/'| prepend: site.baseurl }}" class="c-link u-type-tiny u-mb1">FAQ</a>
+                                    
                                 </div>
                                 <div class="o-split-bar__second o-split-bar__second--align-start u-flex u-flex-vertical">
-                                    <a href="#" class="c-link u-type-tiny u-mb1">Become a Sponsor</a>
                                     <span class="u-type-h5 u-mb1">
 
                       <a href="" class="c-link u-mlp5"></a>
