--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,7 +17,7 @@ description: >
     <link rel="stylesheet" href="{{ '/assets/schedule.css' | prepend: site.baseurl }}">
 
     <title data-i18n="meta:title:brewing-innovative-minds">NEXT 2019</title>
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" href="{{ '/assets/images/favicon.ico' | prepend: site.baseurl }}">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
     <link rel="manifest" href="assets/icons/manifest.json">
